[package]
name = "liquidatable-accounts-feed"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }

solana-rpc = "=1.8.11"
solana-client = "=1.8.11"
solana-account-decoder = "=1.8.11"
solana-sdk = "=1.8.11"
solana-logger = "=1.8.11"

# The v3.2 branch currently has a conflicting syn version dependency, use a fixed version
mango = { git = "https://github.com/ckamm/mango-v3", branch = "ckamm/liquidatable-dep" }
mango-common = { git = "https://github.com/ckamm/mango-v3", branch = "ckamm/liquidatable-dep" }

serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }

tokio = { version = "1", features = ["full"] }

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

bs58 = "0.3.1"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
fixed = { version = "=1.9.0", features = ["serde"] }
bytes = "1.0"
toml = "0.5"
bytemuck = "^1.7.2"

futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"

async-stream = "0.2"
async-channel = "1.6"
async-trait = "0.1"

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }
