[package]
name = "liquidatable-accounts-feed"
version = "0.1.0"
authors = ["Christian Kamm <mail@ckamm.de>"]
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-core-client = { version = "18.0.0", features = ["ws", "http", "tls"] }

solana-rpc = "=1.8.11"
solana-client = "=1.8.11"
solana-account-decoder = "=1.8.11"
solana-sdk = "=1.8.11"
solana-logger = "=1.8.11"

mango = { git = "https://github.com/blockworks-foundation/mango-v3", gitref = "f4294688fb00ff18b2bf0b730d79ce005f7d124e", features = ["client"] }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3", gitref = "f4294688fb00ff18b2bf0b730d79ce005f7d124e" }

serum_dex = { version = "0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16.1"

serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"

bs58 = "0.3.1"
log = "0.4"
rand = "0.7"
anyhow = "1.0"
fixed = { version = "=1.9.0", features = ["serde"] }
bytes = "1.0"
toml = "0.5"
bytemuck = "^1.7.2"

futures = "0.3.17"
futures-core = "0.3"
futures-util = "0.3"

async-stream = "0.2"
async-channel = "1.6"
async-trait = "0.1"

jemallocator = "0.3.2"

[patch.crates-io]
# for gzip encoded responses
jsonrpc-core-client = { git = "https://github.com/ckamm/jsonrpc.git", branch = "ckamm/http-with-gzip" }
